ingress/mlflow-lb.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mlflow-service-lb
  name: mlflow-service-lb
  namespace: mlflow
spec:
  ports:
  - name: 80-5000
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: mlflow-tracking-server-pods
  type: LoadBalancer
