ingress/mlflow-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mlflow
  namespace: mlflow
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # your secret with user credentials
    nginx.ingress.kubernetes.io/auth-secret: mlflow-basic-auth
    # message to display 
    nginx.ingress.kubernetes.io/auth-realm: 'Please authenticate first'
spec:
  ingressClassName: nginx
  rules:
    - host: mlflow.somedomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  mlflow-tracking-server
                port:
                  number: 5000
            
    # This section is only required if TLS is to be enabled for the Ingress
  # tls:
  #   - hosts:
  #     - mlflow.ksomedomain.com
  #     secretName: mlflow-ingress-tls
